--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "socket.io": "^4.5.4",
     "@supabase/supabase-js": "^2.7.1"
