--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "railway-snake-server",
   "version": "1.0.0",
   "description": "Serveur Node pour un jeu snake.io-like avec Socket.io et Supabase",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    // on démarre cluster.js, qui forke ensuite server.js dans chaque worker
+    "start": "node cluster.js"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "socket.io": "^4.5.4",
-    "@supabase/supabase-js": "^2.7.1"
+    "@supabase/supabase-js": "^2.7.1",
+    "cors": "^2.8.5"
   }
 }
+
